<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PH!</string>
    <string name="menu_gamepod_news">Gamepod hírek</string>
    <string name="menu_it_news">IT café hírek</string>
    <string name="menu_logout">Logout cikkek</string>
    <string name="menu_mobilarena_news">Mobilarena hírek</string>
    <string name="menu_prohardver_news">Prohardver hírek</string>
    <string name="no_internet_connection">Nincs internet kapcsolat!</string>
    <string name="comments">Hozzászólások</string>

    <string name="rateApp">Értékeld az alkalmazást</string>
    <string name="rateAppContent">Mennyire tetszik az alkalmazás? Szánj rá egy percet és oszd meg másokkal!</string>
    <string name="error_occurred_try_again">Hiba történt, próbáld újra</string>
    <string name="about">Az alkalmazásról</string>
    <string name="favourites">Kedvenceim</string>
    <string name="acknowledgements">Köszönetnyílvánítás</string>
    <string name="contributors"><b>Az alkalmazás fejlesztésében, tesztelésében, bármilyen módon történő segítségben köszönet:</b>\n\n\u2022 Sherko-nak\n\u2022 Arcanus-nak\n\u2022 Ferob-nak\n\u2022 Dobragab-nak\n\u2022 Szabi__memo-nak\n\n</string>
    <string name="ok">OK</string>
    <string name="help_to_develop_the_app">Segíts az alkalmazás fejlesztésében!</string>
    <string name="develop_the_app_content">Ha tudsz Android-ra alkalmazást fejleszteni (Andoid Studio-ban) és van egy kis szabad időd, vagy ellenálhatatlan vágyat érzel egy BUG javításában lépj kapcsolatba velünk a phfigyelo@gmail.com email címen vagy az alkalmazás topikjában</string>
    <string name="go_to_topic">Ugrás a topikra</string>
    <string name="loading">Töltés…</string>
    <string name="successfully_login">Sikeres bejelentkezés</string>
    <string name="wrong_email_or_password">Hibás felhasználónév vagy jelszó</string>
    <string name="what">¯\\_(ツ)_/¯</string>
    <string name="load_more">Továbbiak betöltése</string>
    <string name="news">Hírek</string>
    <string name="discover">Felfedezés</string>
    <string name="messages">Üzenetek</string>
    <string name="login">Bejelentkezés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="search">Keresés</string>
    <string name="professionalCommentV">Szakmai\n%1s</string>
    <string name="socialCommentV">Közösségi\n%1s</string>
    <string name="marketCommentV">Piaci\n%1s</string>
    <string name="blogsV">Blogok, lokál\n%1s</string>
    <string name="activity">Aktivitás</string>
    <string name="items">Cuccok</string>
    <string name="registeredV">Regisztrált\n%1s</string>
    <string name="lastSeenV">Utolsó feltűnés\n%1s</string>
    <string name="lastMessageV">Utolsó üzenet\n%1s</string>
    <string name="no_search_results">Nincs találat</string>
    <string name="e_mail">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="successfully_logout">Sikeres kijelentkezés</string>
    <string name="topic_search">Topik keresés</string>
    <string name="topic_search_not_available">Topik keresés nem elérhető</string>
    <string name="successfully_post">Sikeres küldés</string>
    <string name="settings">Beállítások</string>
    <string name="start_page">Kezdő oldal</string>
    <string name="notification_preferences_topics_favourite">Értesítés új hozzászóláskor (Kedvencek)</string>
    <string name="notification_preferences_topics_commented">Értesítés új hozzászóláskor (Itt szóltam hozzá)</string>
    <string name="notification_preferences_message">Értesítés új üzenet érkezésénél</string>
    <string name="notification_preferences_message_summary">Értesítést kapsz új üzenet érkezésekor</string>
    <string name="new_comment">Új hozzászólás</string>
    <string name="new_message">Új üzenet</string>
    <string name="failed_to_load">Sikertelen betöltés</string>
    <string name="are_you_sure_to_exit">Biztos vagy abban, hogy ki szeretnél lépni?</string>
    <string name="yes">Igen</string>
    <string name="cancel">Mégse</string>
    <string name="commented_list">Itt szóltam hozzá</string>
    <string name="send">Küldés</string>
    <string name="no_available_topic">Nincs megjelenítendő topik!</string>
    <string name="please_wait">Kérlek várj…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="send_reply">Válasz küldése</string>
    <string name="send_private_message">Privát üzenet küldése</string>
    <string name="notification">Értesítés</string>
    <string name="to_favourites">Kedvencekhez</string>
    <string name="internal_error">Belső hiba történt, sikertelen betöltés</string>
    <string name="edit">Szerkesztés</string>
    <string name="successfully_edit">Sikeres szerkesztés</string>
    <string name="hot_topics">Friss topikok</string>
    <string name="appearance">Megjelenés</string>
    <string name="one_minute">1 perc</string>
    <string name="five_minutes">5 perc</string>
    <string name="ten_minutes">10 perc</string>
    <string name="thirty_minutes">30 perc</string>
    <string name="one_hour">1 óra</string>
    <string name="avatar">Arckép</string>
    <string name="server_error">Nem sikerült kapcsolódni a szerverhez</string>
    <string name="cannot_connect_to_internet">Nem sikerült csatlakozni az internethez</string>
    <string name="timeout_check_network">Időtúllépés, ellenőrizd az internet kapcsolatod</string>
    <string name="smile">Smile</string>
    <string name="topic_overall">Topik összefoglaló</string>
    <string name="captcha">Captcha</string>
    <string name="no_message_to_display">Nincs megjeleníthető üzenet</string>
    <string name="next">Következő</string>
    <string name="refresh">Frissítés</string>
    <string name="last">Utolsó</string>
    <string name="first">Első</string>
    <string name="copy">Másolás</string>
    <string name="no">Nem</string>
    <string name="fail">Hiba</string>
    <string name="copy_topic_url">Topik URL másolása</string>
    <string name="restore_backup">Biztonsági mentés visszaállítása</string>
    <string name="restore_backup_content">Ez törli a PH! beállításait és lecseréli a kijelölt beállításokra. Biztos, hogy folytatni akarod?</string>
    <string name="off_topic">Off topik</string>
    <string name="quoted_comment">Idézett hozzászólás</string>
    <string name="other_options">További lehetőségek</string>
    <string name="light_theme">Világos téma</string>
    <string name="dark_theme">Sötét téma</string>
    <string name="dark_amoled_theme">Sötét téma (AMOLED)</string>
    <string name="theme">Téma</string>
    <string name="save">Mentés</string>
    <string name="delete">Törlés</string>
    <string name="name">Név</string>
    <string name="ph_email">phfigyelo@gmail.com</string>
    <string name="edit_test">Szerkesztés TESZT</string>
    <string name="struggling_login"><a href="https://prohardver.hu">Nem sikerül bejelentkezni? Katt ide!</a></string>
    <string name="please_login">Kérlek jelentkezz be!</string>
    <string name="registration">Regisztráció</string>
    <string name="debug">Debug</string>
    <string name="debug_description">ADB-vel tudod az alkalmazás log üzeneteit fogni</string>
    <string name="information_collecting">Információ gyűjtés</string>
    <string name="information_collecting_description">Az alkalmazás információt gyűjt a tevékenységedről (bővebben az app topikjában tájékozódhatsz)</string>
    <string name="auto_scroll_new_comment_description">A megnyitott topik automatikusan az első új hozzászóláshoz ugrik</string>
    <string name="auto_scroll_new_comment">Automatikus görgetés</string>
    <string name="done">Kész</string>
    <string name="import_settings">Beállítások importálása</string>
    <string name="export_settings">Beállítások exportálása</string>
    <string name="app_welcome_description">Az alkalmazásról bővebben az app <a href="https://prohardver.hu/tema/prohardver_topik_figyelo_android_alkalmazas/friss.html">topikjában</a> olvashatsz. Fontos, hogy ez a prohardver.hu oldalon regisztrált adataiddal működik. Bővebben a <a href="https://prohardver.hu">honlapukjon</a> tájékozódhatsz.</string>
    <string name="app_welcome">Üdv, kérlek jelentezz be az alkalmazás használhatához!</string>
    <string name="quick_personalization">Gyors személyre szabás</string>
    <string name="username">Felhasználónév</string>
    <string name="default_informations">Alap információk</string>
    <string name="rank">Rang</string>
    <string name="signature">Aláírás</string>
</resources>
