<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Egyéb">

        <SwitchPreference
            android:key="preferences_other_switch_debug"
            android:summary="@string/debug_description"
            android:title="@string/debug" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preferences_other_switch_analytics"
            android:summary="@string/information_collecting_description"
            android:title="@string/information_collecting" />

        <Preference
            android:key="preferences_other_export_settings"
            android:title="@string/export_settings" />

        <Preference
            android:key="preferences_other_import_settings"
            android:title="@string/import_settings" />

    </PreferenceCategory>
</PreferenceScreen>