<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_news_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_news_prohardver"
            android:title="@string/menu_prohardver_news" />

        <item
            android:id="@+id/menu_news_mobilarena"
            android:title="@string/menu_mobilarena_news" />

        <item
            android:id="@+id/menu_news_it_cafe"
            android:title="@string/menu_it_news" />

        <item
            android:id="@+id/menu_news_gamepod"
            android:title="@string/menu_gamepod_news" />

        <item
            android:id="@+id/menu_news_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>