<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_drawer_group_1">
        <item
            android:id="@+id/menu_drawer_navigation_explore"
            android:icon="@drawable/vd_compass"
            android:title="@string/discover" />
        <item
            android:id="@+id/menu_drawer_navigation_news"
            android:icon="@drawable/vd_newspaper"
            android:title="@string/news" />
        <item
            android:id="@+id/menu_drawer_navigation_hot_topics"
            android:icon="@drawable/vd_format_list_numbers"
            android:title="@string/hot_topics" />
    </group>

    <group android:id="@+id/menu_drawer_group_2">
        <item
            android:id="@+id/menu_drawer_navigation_messages"
            android:icon="@drawable/vd_message"
            android:title="@string/messages"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/menu_drawer_navigation_favourites"
            android:icon="@drawable/vd_bookmark"
            android:title="@string/favourites"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/menu_drawer_navigation_commented_list"
            android:icon="@drawable/vd_gesture"
            android:title="@string/commented_list"
            app:actionViewClass="android.widget.TextView" />
    </group>

    <group android:id="@+id/menu_drawer_group_3">
        <item
            android:id="@+id/menu_drawer_navigation_about"
            android:icon="@drawable/vd_information_outline"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_drawer_navigation_settings"
            android:icon="@drawable/vd_settings"
            android:title="@string/settings" />
        <!-- Need free space for the footer item(s) -->
        <item android:title="" />
    </group>

</menu>