<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/material_component_cards_left_and_right_padding"
    android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
    android:layout_marginEnd="@dimen/material_component_cards_left_and_right_padding"
    android:layout_marginBottom="@dimen/material_component_cards_top_and_bottom_padding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/material_component_cards_left_and_right_padding"
        android:paddingTop="@dimen/material_component_cards_top_and_bottom_padding"
        android:paddingRight="@dimen/material_component_cards_left_and_right_padding"
        android:paddingBottom="@dimen/material_component_cards_top_and_bottom_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_welcome"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/text_size_medium" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_view_login_finish_welcome_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
                android:linksClickable="true"
                android:text="@string/app_welcome_description"
                android:textSize="@dimen/text_size_body" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_component_cards_top_and_bottom_padding"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_activity_register"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/registration" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_activity_login"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>